[package]
name = "kodama"
version = "0.2.2"  #:version
authors = ["Diffeo <support@diffeo.com>"]
description = """
Agglomerative hierarchical clustering.
"""
documentation = "https://github.com/diffeo/kodama"
homepage = "https://github.com/diffeo/kodama"
repository = "https://github.com/diffeo/kodama"
readme = "README.md"
keywords = ["agglomerative", "hierarchical", "cluster", "fastcluster", "linkage"]
license = "MIT"
exclude = ["data/locations/*.dist"]

[workspace]
members = ["kodama-bin", "kodama-capi"]

[lib]
name = "kodama"

[dependencies]
# For writing generic floating point code.
num-traits = "0.2.12"

[dev-dependencies]
# For reading benchmark data.
byteorder = "1.3.4"
# For random number generation.
rand = "0.7.3"
# For simple global initialization.
lazy_static = "1.4.0"
# For property based testing.
quickcheck = { version = "0.9.2", default-features = false }

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.test]
opt-level = 3
