[package]
name = "kodama"
version = "0.3.0"  #:version
authors = ["Diffeo <support@diffeo.com>"]
description = """
Agglomerative hierarchical clustering.
"""
documentation = "https://github.com/diffeo/kodama"
homepage = "https://github.com/diffeo/kodama"
repository = "https://github.com/diffeo/kodama"
readme = "README.md"
keywords = ["agglomerative", "hierarchical", "cluster", "fastcluster", "linkage"]
license = "MIT"
exclude = ["data/locations/*.dist"]
edition = "2018"

[workspace]
members = ["kodama-bin", "kodama-capi"]

[lib]
name = "kodama"

[dependencies.num-traits]
# For writing generic floating point code.
version = "0.2.12"
optional = true

[dev-dependencies]
# For reading benchmark data.
byteorder = "1.4.3"
# For random number generation.
rand = "0.8.4"
# For simple global initialization.
lazy_static = "1.4.0"
# For property based testing.
quickcheck = { version = "1.0.3", default-features = false }

[features]
default = []
float-trait = ["num-traits"]

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.test]
opt-level = 3
