[package]
name = "kodama-capi"
version = "0.1.3"  #:version
authors = ["Diffeo <support@diffeo.com>"]
description = """
A C API for the kodama agglomerative hierarchical clustering library.
"""
documentation = "https://github.com/diffeo/kodama"
homepage = "https://github.com/diffeo/kodama"
repository = "https://github.com/diffeo/kodama"
readme = "README.md"
keywords = ["agglomerative", "hierarchical", "cluster", "fastcluster", "linkage"]
license = "MIT"
edition = "2018"

[lib]
name = "kodama"
crate-type = ["staticlib", "cdylib"]

[dependencies]
kodama = { version = "0.2.3", path = ".." }
